--- a/core/package.json
+++ b/core/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "./dist/src/app.js",
   "scripts": {
+    "clean": "rm -rf ./dist/* ",
+    "build": "tsc ",
     "watch-ts": "tsc -w",
     "watch-node": "nodemon dist/app.js",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript, Node\" -c \"yello.bold, cyan.bold\" \"npm run watch-ts\" \"npm run watch-node\""
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript, Node\" -c \"yello.bold, cyan.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
+    "start": "node ./dist/app.js"
   },
   "repository": {
     "type": "git",
@@ -18,17 +21,20 @@
     "url": "https://github.com/feedbee/My-Bookshelf/issues"
   },
   "homepage": "https://github.com/feedbee/My-Bookshelf",
-  "dependencies": {
+  "devDependencies": {
+    "typescript": "^3.6.3",
     "@types/express": "^4.17.2",
     "@types/express-handlebars": "^3.1.0",
     "@types/handlebars": "^4.1.0",
     "@types/mongoose": "^5.5.41",
     "concurrently": "^5.0.2",
+    "nodemon": "^2.0.2"
+  },
+  "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "handlebars": "^4.7.0",
     "mongodb": "^3.4.1",
-    "mongoose": "^5.8.9",
-    "nodemon": "^2.0.2"
+    "mongoose": "^5.8.9"
   }
 }
